<resources>
    <string name="app_name">Sudoku</string>
    <string name="saved">Saved</string>
    <string name="hint">Hint</string>
    <string name="stats">Stats</string>
    <string name="complexity">Complexity</string>
    <string name="new_game">New Game</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="beginner_complexity">Beginner</string>
    <string name="easy_complexity">Easy</string>
    <string name="normal_complexity">Normal</string>
    <string name="hard_complexity">Hard</string>
    <string name="expert_complexity">Expert</string>
    <string name="started_games">Started games</string>
    <string name="completed_games">Completed games</string>
    <string name="win_rate">Win rate</string>
    <string name="best_time">Best time</string>
    <string name="average_time">Average time</string>
    <string name="last_game">LAST GAME</string>
</resources>
